# campus

./: alembic.ini  pyproject.toml
campus/: database.py  exceptions.py  main.py
campus/models/: commentModel.py  groupModel.py  postModel.py  reportModel.py  studentCommentVoteModel.py  studentGroupModel.py  studentModel.py  studentPostVoteModel.py
campus/routers/: commentRouter.py  groupRouter.py  postRouter.py  studentGroupRouter.py  studentRouter.py
campus/schemas/: commentSchema.py  groupSchema.py  postSchema.py  reportSchema.py  studentCommentVoteSchema.py  studentGroupSchema.py  studentPostVoteSchema.py  studentSchema.py
migrations/: env.py
migrations/versions/: 27e741ed27a1_add_vote_count_to_comments_posts_and_.py  33104d0a095d_alter_column_name_student_post_vote_id_.py  3b7b8c08923a_add_is_subscribed_to_student_groups_.py  57a6469da215_create_vote_tables.py  690ee2c3a029_create_tables_v2.py  7219b569554b_add_default_0_to_vote_count.py  85be07aad453_create_tables_v1.py  8b41cbe8b875_create_table_stuent_groups.py  8e8ec4ba040d_adding_reports_table.py  bba0e2e601ce_alter_column_name_student_post_vote_id.py
