[tool.poetry]
name = "campus"
version = "0.1.0"
description = ""
authors = ["raghu7dc <raghuboyapati777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pymysql = "^1.1.1"
sqlalchemy = "^2.0.36"
passlib = "^1.7.4"
alembic = "^1.14.0"
bcrypt = "^4.2.1"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
